# Proyectos_varios

./: .gitignore  Hangman.py  README.md  classSC.py  coffee_machine.py  pdf_to_image.py  pyproject.toml  requirements.txt  simple_compressor_pdf.py  update_mods_cli.py  words.txt
Coffee_Machine/: README.md
GUI_compressorPDF/: README.md
Html_to_PDF/: README.md  html_to_pdf.py  requirements.txt
Merge_PDF_GUI/: mergePDF.py
PyMoDoRo/: pymodoro.py
Tic_Tac_Toe/: README.md  Tic_Tac_Toe.py
auto_update_mods/: AutoUpdateClass.py  update_mods_cli.py
auto_update_mods/tests/: list_mods.txt  tests.py
change_meta_PDF/: README.md  reset_metadata_pdf.sh
clase/: AutoUpdateClass.py
flac_to_mp3/: README.txt  convert_flac_to_mp3.sh
gui_image_compress/: GUI_pillow.py  pyPillow.py
scraping_Sismologia_cl/: README.md  requirements.txt  sismologia_scrapy.py
scraping_web_to_pdf/: README.md
tests/: tests.py
