[tool.poetry]
name = "auto-update-mods"
version = "0.1.0"
description = "Update Minecraft Java Mods without complications."
authors = ["kurotom <55354389+kurotom@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "auto_update_mods"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
